--- a/src/Microsoft.VisualBasic/Directory.Build.props
+++ b/src/Microsoft.VisualBasic/Directory.Build.props
@@ -1,6 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\dir.props" />
+﻿<Project>
+  <Import Project="..\Directory.Build.props" />
   <PropertyGroup>
     <PackageVersion>10.4.0</PackageVersion>
     <AssemblyVersion>10.0.4.0</AssemblyVersion>
