refactored TestsWriteEventToListener.cs

--- a/src/System.Diagnostics.Tracing/tests/System.Diagnostics.Tracing.Tests.csproj
+++ b/src/System.Diagnostics.Tracing/tests/System.Diagnostics.Tracing.Tests.csproj
@@ -18,6 +18,7 @@
     <Compile Include="BasicEventSourceTest\TestsUserErrors.Etw.cs" />
     <Compile Include="BasicEventSourceTest\TestsWriteEvent.Etw.cs" />
     <Compile Include="BasicEventSourceTest\FuzzyTests.Etw.cs" />
+    <Compile Include="BasicEventSourceTest\TestsWriteEventToListener.Etw.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasicEventSourceTest\Harness\EventTestHarness.cs" />
