--- a/src/System.ValueTuple/src/Configurations.props
+++ b/src/System.ValueTuple/src/Configurations.props
@@ -11,6 +11,7 @@
       $(PackageConfigurations);
       netcoreapp;
       uap-Windows_NT;
+      _netcoreapp2.0;
     </BuildConfigurations>
   </PropertyGroup>
 </Project>
