--- a/src/System.CodeDom/tests/System.CodeDom.Tests.csproj
+++ b/src/System.CodeDom/tests/System.CodeDom.Tests.csproj
@@ -22,7 +22,14 @@
     <Compile Include="System\CodeDom\CodeTypeMemberCollectionTests.cs" />
     <Compile Include="System\CodeDom\CodeTypeParameterCollectionTests.cs" />
     <Compile Include="System\CodeDom\CodeTypeReferenceCollectionTests.cs" />
+    <Compile Include="System\CodeDom\Compiler\CodeGeneratorTests.cs" />
+    <Compile Include="System\CodeDom\Compiler\CompilerInfoTests.cs" />
+    <Compile Include="System\CodeDom\Compiler\CodeGeneratorOptionsTests.cs" />
     <Compile Include="System\CodeDom\Compiler\CompilerErrorCollectionTests.cs" />
+    <Compile Include="System\CodeDom\Compiler\CompilerParametersTests.cs" />
+    <Compile Include="System\CodeDom\Compiler\CompilerErrorTests.cs" />
+    <Compile Include="System\CodeDom\Compiler\CompilerResultsTests.cs" />
+    <Compile Include="System\CodeDom\Compiler\CodeCompilerTests.cs" />
     <Compile Include="System\CodeDom\TempFileCollectionTests.cs" />
     <Compile Include="System\CodeDom\CodeObjectCreateExpressionTests.cs" />
     <Compile Include="System\CodeDom\CodeParameterDeclarationExpressionTests.cs" />
@@ -102,6 +109,9 @@
     </Compile>
     <Compile Include="$(CommonTestPath)\System\Collections\TestBase.NonGeneric.cs">
       <Link>Common\System\Collections\TestBase.NonGeneric.cs</Link>
+    </Compile>
+    <Compile Include="$(CommonTestPath)\System\IO\TempFile.cs">
+      <Link>Common\System\IO\TempFile.cs</Link>
     </Compile>
   </ItemGroup>
   <ItemGroup>
