Exclude tests that require gdiplus to not produce errors

--- a/src/System.Drawing.Common/tests/Performance/System.Drawing.Common.Performance.Tests.csproj
+++ b/src/System.Drawing.Common/tests/Performance/System.Drawing.Common.Performance.Tests.csproj
@@ -9,6 +9,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'netstandard-Debug|AnyCPU'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'netstandard-Release|AnyCPU'" />
   <ItemGroup>
+    <Compile Include="BenchmarkFilter.cs" />
     <Compile Include="Perf_Graphics_DrawBeziers.cs" />
     <Compile Include="Perf_Graphics_Transforms.cs" />
     <ProjectReference Include="$(CommonTestPath)\System\Diagnostics\RemoteExecutorConsoleApp\RemoteExecutorConsoleApp.csproj">
