Set CMake language to C to skip CXX compiler search

--- a/src/Native/Unix/System.Security.Cryptography.Native/CMakeLists.txt
+++ b/src/Native/Unix/System.Security.Cryptography.Native/CMakeLists.txt
@@ -1,5 +1,4 @@
-
-project(System.Security.Cryptography.Native)
+project(System.Security.Cryptography.Native C)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
