Ensure csc command line is the same as before converting to Sdk projects.
Also fixing projects that have a dependency on a resource name which requires RootNamespace to be empty.

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -3,7 +3,8 @@
   <Import Project="..\Directory.Build.props" />
   <PropertyGroup>
     <EnableDefaultItems>false</EnableDefaultItems>
-    <NoWarn>CS3021;$(NoWarn)</NoWarn>
+    <DisableImplicitFrameworkDefines>true</DisableImplicitFrameworkDefines>
+    <DisableImplicitConfigurationDefines>true</DisableImplicitConfigurationDefines>
     
     <!--
     The Microsoft.NET.Sdk defaults the AssemblySearchPaths earlier than buildtools, so default
