--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -2,6 +2,12 @@
 <Project InitialTargets="AddSkipGetTargetFrameworkToProjectReferences">
   <PropertyGroup>
     <ErrorIfBuildToolsRestoredFromIndividualProject Condition="!Exists('$(ToolsDir)')">true</ErrorIfBuildToolsRestoredFromIndividualProject>
+
+    <!-- Reset these properties back to blank, since they are defaulted by Microsoft.NET.Sdk -->
+    <FileAlignment Condition="'$(FileAlignment)' == '512'"></FileAlignment>
+    <ErrorReport Condition="'$(ErrorReport)' == 'prompt'"></ErrorReport>
+    <Deterministic></Deterministic>
+    <WarningsAsErrors Condition="'$(WarningsAsErrors)' == 'NU1605'"></WarningsAsErrors>
   </PropertyGroup>
 
   <Import Project="..\Directory.Build.targets" />
