C++ cleanups and native code formatting (#30495)
* Remove C++ residue

* Unify typedef and enum stylings

* Clang 6.0 fixes

* Set CMake language to C to skip CXX compiler search

* Set visibility for Brotli APIs

--- a/src/Native/Unix/System.Native/CMakeLists.txt
+++ b/src/Native/Unix/System.Native/CMakeLists.txt
@@ -1,7 +1,4 @@
-project(System.Native)
-
-# We mark the function which needs exporting with DLLEXPORT
-add_compile_options(-fvisibility=hidden)
+project(System.Native C)
 
 set(NATIVE_SOURCES
     pal_console.c
