--- a/src/Native/Unix/CMakeLists.txt
+++ b/src/Native/Unix/CMakeLists.txt
@@ -1,26 +1,23 @@
 cmake_minimum_required(VERSION 2.8.12)
-project(CoreFX)
+project(CoreFX C)
 
 set(CMAKE_MACOSX_RPATH ON)
 set(CMAKE_INSTALL_PREFIX $ENV{__CMakeBinDir})
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(CMAKE_SHARED_LIBRARY_PREFIX "")
 set(VERSION_FILE_PATH "${CMAKE_BINARY_DIR}/../../version.c")
 
+# We mark the function which needs exporting with DLLEXPORT
+add_compile_options(-fvisibility=hidden)
+
 add_compile_options(-Wno-format-nonliteral)
 add_compile_options(-Wno-disabled-macro-expansion)
-add_compile_options(-Wno-c++98-compat)
 add_compile_options(-Wno-padded)
 add_compile_options(-Wno-empty-translation-unit)
-add_compile_options(-Wno-old-style-cast)
 add_compile_options(-Wno-cast-align)
 add_compile_options(-Wno-typedef-redefinition)
-add_compile_options(-Wno-unused-local-typedef)
-add_compile_options(-Wno-c99-extensions)
 add_compile_options(-Wno-c11-extensions)
-add_compile_options(-Wmissing-prototypes)
 add_compile_options(-Wno-incompatible-pointer-types-discards-qualifiers)
 add_compile_options(-fPIC)
 add_compile_options(-I${CMAKE_CURRENT_SOURCE_DIR}/Common)
@@ -28,9 +25,6 @@ add_compile_options(-I${CMAKE_CURRENT_BINARY_DIR}/Common)
 add_compile_options(-g)
 add_compile_options(-Wthread-safety)
 add_compile_options(-Werror)
-if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 3.5)
-    add_compile_options(-Wno-unreachable-code)
-endif ()
 
 if (CMAKE_SYSTEM_PROCESSOR STREQUAL x86_64 OR CMAKE_SYSTEM_PROCESSOR STREQUAL amd64)
     add_definitions(-DBIT64=1)
@@ -67,22 +61,15 @@ if (UPPERCASE_CMAKE_BUILD_TYPE STREQUAL DEBUG)
     string(FIND "$ENV{DEBUG_SANITIZERS}" "asan" __ASAN_POS)
     string(FIND "$ENV{DEBUG_SANITIZERS}" "ubsan" __UBSAN_POS)
     if ((${__ASAN_POS} GREATER -1) OR (${__UBSAN_POS} GREATER -1))
-      set(CLR_SANITIZE_CXX_FLAGS "${CLR_SANITIZE_CXX_FLAGS} -fsanitize=")
       set(CLR_SANITIZE_LINK_FLAGS "${CLR_SANITIZE_LINK_FLAGS} -fsanitize=")
       if (${__ASAN_POS} GREATER -1) 
-        set(CLR_SANITIZE_CXX_FLAGS "${CLR_SANITIZE_CXX_FLAGS}address,")
         set(CLR_SANITIZE_LINK_FLAGS "${CLR_SANITIZE_LINK_FLAGS}address,")
         message("Address Sanitizer (asan) enabled")
       endif ()
       if (${__UBSAN_POS} GREATER -1)
-        set(CLR_SANITIZE_CXX_FLAGS "${CLR_SANITIZE_CXX_FLAGS}undefined")
         set(CLR_SANITIZE_LINK_FLAGS "${CLR_SANITIZE_LINK_FLAGS}undefined")
         message("Undefined Behavior Sanitizer (ubsan) enabled")
       endif ()
-
-      # -fdata-sections -ffunction-sections: each function has own section instead of one per .o file (needed for --gc-sections)
-      # -fPIC: enable Position Independent Code normally just for shared libraries but required when linking with address sanitizer
-      set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${CLR_SANITIZE_CXX_FLAGS} -fdata-sections -ffunction-sections -fPIC")
 
       set(CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG} ${CLR_SANITIZE_LINK_FLAGS}")
 
@@ -92,7 +79,7 @@ if (UPPERCASE_CMAKE_BUILD_TYPE STREQUAL DEBUG)
 elseif (UPPERCASE_CMAKE_BUILD_TYPE STREQUAL RELEASE)
     # Use O1 option when the clang version is smaller than 3.9
     # Otherwise use O3 option in release build
-    if (CMAKE_SYSTEM_PROCESSOR STREQUAL armv7l AND DEFINED ENV{CROSSCOMPILE} AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 3.9)
+    if (CMAKE_SYSTEM_PROCESSOR STREQUAL armv7l AND DEFINED ENV{CROSSCOMPILE} AND CMAKE_C_COMPILER_VERSION VERSION_LESS 3.9)
         add_compile_options (-O1)
     else()
         add_compile_options (-O3)
@@ -253,10 +240,6 @@ include(configure.cmake)
 add_subdirectory(System.IO.Compression.Native)
 
 add_compile_options(-Weverything)
-add_compile_options(-Wno-c++98-compat-pedantic)
-if (HAVE_ZERO_AS_NULL_POINTER_CONSTANT_FLAG)
-    add_compile_options(-Wno-zero-as-null-pointer-constant)
-endif()
 
 add_subdirectory(System.Native)
 add_subdirectory(System.Net.Http.Native)
