Use public implementation MarshalSupport (#30494)
* Use public implementation MarshalSupport

* Implement NotifyCollectionChangedEventArgsMarshaler ConvertToManaged and PropertyChangedEventArgsMarshaler ConvertToNative

* Refactor RoGetActivationFactory into Common

* Update according to comments and add an analyzerdata file

--- a/src/System.Runtime.WindowsRuntime/src/System.Runtime.WindowsRuntime.csproj
+++ b/src/System.Runtime.WindowsRuntime/src/System.Runtime.WindowsRuntime.csproj
@@ -65,6 +65,9 @@
     <Compile Include="System\Threading\Tasks\AsyncInfoToTaskBridge.CoreCLR.cs" />
     <Compile Include="System\Threading\WindowsRuntimeSynchronizationContext.cs" />
     <Compile Include="System\WindowsRuntimeSystemExtensions.CoreCLR.cs" />
+    <Compile Include="$(CommonPath)\Interop\Windows\mincore\Interop.RoGetActivationFactory.cs">
+      <Link>Common\Interop\Windows\mincore\Interop.RoGetActivationFactory.cs</Link>
+    </Compile>
     <Compile Include="$(CommonPath)\System\Runtime\InteropServices\WindowsRuntime\WindowsRuntimeImportAttribute.cs">
       <Link>Common\System\Runtime\InteropServices\WindowsRuntime\WindowsRuntimeImportAttribute.cs</Link>
     </Compile>
