build stub assemblies on FreeBSD from *UnknownUnix*

--- a/src/System.Net.NetworkInformation/src/Configurations.props
+++ b/src/System.Net.NetworkInformation/src/Configurations.props
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <BuildConfigurations>
       uap-Windows_NT;
+      netcoreapp-FreeBSD;
       netcoreapp-Linux;
       netcoreapp-OSX;
       netcoreapp-Windows_NT;
