Configuration changes so that System.Reflection.Emit may compile against netstandard2.0

--- a/src/System.Reflection.Emit.ILGeneration/ref/Configurations.props
+++ b/src/System.Reflection.Emit.ILGeneration/ref/Configurations.props
@@ -4,6 +4,7 @@
     <BuildConfigurations>
       netcoreapp;
       uap;
+      netstandard;
     </BuildConfigurations>
   </PropertyGroup>
 </Project>
