--- a/src/System.Reflection.Emit/ref/Configurations.props
+++ b/src/System.Reflection.Emit/ref/Configurations.props
@@ -4,6 +4,7 @@
     <BuildConfigurations>
       netcoreapp;
       uap;
+      netstandard;
     </BuildConfigurations>
   </PropertyGroup>
 </Project>
