Fix FontFamily.Name performance by using span and calling the interop code with char pointer

--- a/src/System.Drawing.Common/tests/Performance/System.Drawing.Common.Performance.Tests.csproj
+++ b/src/System.Drawing.Common/tests/Performance/System.Drawing.Common.Performance.Tests.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <Compile Include="CustomAssemblyAttributes.cs" />
     <Compile Include="Perf_Graphics_DrawBeziers.cs" />
+    <Compile Include="Perf_FontFamily_Name.cs" />
     <Compile Include="Perf_Graphics_Transforms.cs" />
     <ProjectReference Include="$(CommonTestPath)\System\Diagnostics\RemoteExecutorConsoleApp\RemoteExecutorConsoleApp.csproj">
       <Project>{69e46a6f-9966-45a5-8945-2559fe337827}</Project>
